fix(web): allows keytip overflow into callout for 'descenders'

--- a/web/src/resources/osk/kmwosk.css
+++ b/web/src/resources/osk/kmwosk.css
@@ -384,6 +384,7 @@ span.kmw-keytip-label {
   transform: translateY(-50%);
   top: 50%;
   position: relative;
+  z-index: 1; /* allows characters like 'g' and 'y' to overflow onto callouts */
 }
 
 div.ios div.kmw-keytip-cap,
